--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,33 @@
 {
-  "compileOnSave": true,
   "compilerOptions": {
+    "incremental": true,
     "target": "ES2019",
-    "module": "commonjs",
-    "lib": ["ES2019"],
-    "allowJs": true,
     "outDir": "build",
-    "rootDir": "src",
-    "strict": false,
-    // "noImplicitAny": true,
+    "moduleResolution": "node",
+    "module": "esnext",
+    "declaration": true,
+    "inlineSourceMap": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "declaration": true
+    "preserveValueImports": false,
+
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "skipLibCheck": true,
+    "traceResolution": false,
+    "listEmittedFiles": false,
+    "listFiles": false,
+    "pretty": true,
+    "allowJs": true,
+    "lib": ["es2019"],
+    "types": ["node"],
+    "typeRoots": ["node_modules/@types", "src/types"],
+    "preserveWatchOutput": true,
+    "noEmit": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules/**", "**/__tests__/**", "dist"]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules/**", "build", "__tests__/**"],
+  "compileOnSave": false
 }
